Fixed overflow for code blocks

--- a/templates/blog/public/style.css
+++ b/templates/blog/public/style.css
@@ -278,7 +278,7 @@ a.button-readmore {
     margin-bottom: 1.5em;
     display: block;
     white-space: pre;
-    overflow:scroll;
+    overflow:auto;
     font-size: 1.1em;
     color: #d0e1f2;
     text-shadow:1px 1px 4px #000;
@@ -490,226 +490,4 @@ div.download-box a {
     border:1px solid #105D94;
     box-shadow:1px 1px 2px #888, inset 1px 1px 0px #60B1EB;
 }
-
-
-.article-content code.block {
-    background: #293745;
-    background: url('/public/code-back.png');
-    padding: 0.5em;
-    margin-top: 0.5em;
-    display: block;
-    white-space: pre;
-    overflow:scroll;
-    font-size: 1.1em;
-    color: #d0e1f2;
-    text-shadow:1px 1px 4px #000;
-    border-radius:10px;
-    box-shadow:inset 1px 1px 1px #111, 1px 1px 1px #fff;
-}
-.article-content em {
-    color: #777;
-    color: rgba(0, 0, 0, 0.7);
-    font-size:0.85em;
-    text-shadow:1px 1px 0px #fff;
-}
-.article-content ul li, .article-content ol li {
-    margin-left:2.5em;
-}
-
-/*
- * Categories
---------------------------------------------------*/
-
-.categories ul.post-list {
-    list-style: none;
-}
-.categories ul.post-list li {
-    margin-left: 2.0em;
-    margin-top:0.4em;
-    padding-bottom: 0.4em;
-    border-bottom: 2px dotted #ccc;
-}
-.categories ul li a.title {
-    display: inline;
-    font-weight:bold;
-    color:#1F4559;
-    font-size:1.1em;
-}
-.categories ul li a.title:hover {
-    color:#2890C7;
-}
-.categories ul li {
-    position: relative;
-}
-.categories ul li span.date {
-    margin-right:1.0em;
-    color:#555;
-    text-transform:uppercase;
-}
-.full-layout .categories ul li span.date {
-    position:absolute;
-}
-.full-layout .categories ul li .article-details {
-    margin-left: 7.5em;
-}
-.categories a.title {
-    display:block;
-    color:#1F4559;
-    font-weight:bold;
-    text-decoration: none;
-    font-size:1.5em;
-    text-shadow:1px 1px 0px #fff;
-}
-.categories a.title:hover {
-    color:#2890C7;
-}
-/*
- * Pagination
---------------------------------------------------*/
-.page-navigation {
-    margin-bottom: 1.0em;
-}
-.pagination-block ul.pagination {
-    list-style: none;
-    margin-bottom: 4.0em;
-}
-.pagination-block ul.pagination li {
-    float: left;
-    margin-right: 2.0em;
-}
-
-/*
- * Archive 
---------------------------------------------------*/
-.archive {
-    position: relative;
-}
-.archive span.archive-year {
-    color: #888; 
-    font-size:2.0em;
-}
-.archive span.archive-month {
-    color:#888;
-    font-size:1.3em;
-}
-.archive .archive-post {
-    margin-bottom:0.8em;
-    padding-bottom: 0.4em;
-    border-bottom: 1px dotted #ccc;
-}
-
-.full-layout .archive span.archive-year {
-    position:absolute;
-}
-.full-layout .archive span.archive-month {
-    position:absolute;
-    margin-left: 4em;
-}
-.full-layout .archive .archive-post {
-    margin-left: 8em;
-}
-
-.archive .archive-post a.title {
-    display: inline;
-    font-weight: bold;
-    color: #1F4559;
-    font-size: 1.1em;
-}
-.archive .archive-post a.title:hover {
-    color:#2890C7;
-    text-decoration:none;
-}
-.archive-separator {
-    margin-bottom:2.0em;
-}
-
-
-
-/*
- * Tag list
---------------------------------------------------*/
-.tag-list {
-    font-size: 0.8em;
-    margin-top:1.0em;
-}
-.tag-list, .tag-list  span {
-    color: #888;
-}
-.tag-list a {
-    color: #666;
-}
-
-/*
- * Side Bar
---------------------------------------------------*/
-h3 {
-    color:#111;
-    text-shadow: 1px 1px 0px #fff;
-}
-
-.recent-posts {
-    list-style:none;
-    padding:0;
-}
-.recent-posts li {
-    margin-bottom:0.6em;
-    border-bottom: 1px dotted #ccc;
-}
-
-
-div.step-marker span {
-    float: left;
-    display:inline-block;
-    background: #888;
-    padding: 0.4em;
-    font-size:1.5em;
-    font-weight:bold;
-    color:#fff;
-    border-radius:30px;
-    text-shadow:1px 1px 2px #222;
-    box-shadow:inset 1px 1px 1px #444;
-}
-div.step-marker h2 {
-    float:left;
-    margin-top:0;
-    padding-top: 0.5em;
-    margin-left: 0.5em;
-    /*padding-left: 5.0em;*/
-}
-div.step-marker:after {
-    content:".";
-    display:block;
-    height:0;
-    visibility:hidden;
-    clear:both;
-}
-
-
-div.download-box {
-    margin-top:1.0em;
-    padding:1.0em;
-    display:block;
-    min-width:300px;
-    max-width:400px;
-    border:1px solid #aaa;
-    background:#dedede;
-    color:#444;
-    border-radius: 10px;
-    box-shadow:1px 1px 3px #ccc;
-}
-
-div.download-box a {
-    display:block;
-    color:white;
-    font-weight:bold;
-    border-radius:10px;
-    background: #1B8EE0;
-    margin-top:0.5em;
-    padding:0.5em;
-    width:250px;
-    text-shadow:none;
-    border:1px solid #105D94;
-    box-shadow:1px 1px 2px #888, inset 1px 1px 0px #60B1EB;
-}
-
 
